--- a/client/src/app/components/sidenav/sidenav.component.html
+++ b/client/src/app/components/sidenav/sidenav.component.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <div>
-  <div class="sidenav-button-grp" autosize>
-    <mat-button-toggle class="sidenav-button" (click)="toggleDrawer(1)" [class.active]="activeButton === 1">
-      <mat-icon class="icon-display" aria-label="USER">insert_emoticon</mat-icon>
-      <label class="button-label">Account</label>
-    </mat-button-toggle>
-    <mat-button-toggle class="sidenav-button" (click)="toggleDrawer(2)" [class.active]="activeButton === 2">
-      <mat-icon class="icon-display" aria-label="ROOMS">settings_overscan</mat-icon>
-      <label class="button-label">Rooms</label>
-    </mat-button-toggle>
-    <mat-button-toggle class="sidenav-button" (click)="toggleDrawer(3)" [class.active]="activeButton === 3">
-      <mat-icon class="icon-display" aria-label="ELEMENTS">extension</mat-icon>
-      <label class="button-label">Elements</label>
-    </mat-button-toggle>
-    <mat-button-toggle class="sidenav-button" (click)="toggleDrawer(4)" [class.active]="activeButton === 4">
-      <mat-icon class="icon-display" aria-label="ITEMS">folder_open</mat-icon>
-      <label class="button-label">Items</label>
-    </mat-button-toggle>
-  </div>
+  <div class="sidebar-container">
+    <div class="sidenav-button-grp" autosize>
+      <mat-button-toggle class="sidenav-button" (click)="toggleDrawer(1)" [class.active]="activeButton === 1">
+        <mat-icon class="icon-display" aria-label="USER">insert_emoticon</mat-icon>
+      </mat-button-toggle>
+      <mat-button-toggle class="sidenav-button" (click)="toggleDrawer(2)" [class.active]="activeButton === 2">
+        <mat-icon class="icon-display" aria-label="ROOMS">settings_overscan</mat-icon>
+      </mat-button-toggle>
+      <mat-button-toggle class="sidenav-button" (click)="toggleDrawer(3)" [class.active]="activeButton === 3">
+        <mat-icon class="icon-display" aria-label="ELEMENTS">extension</mat-icon>
+      </mat-button-toggle>
+      <mat-button-toggle class="sidenav-button" (click)="toggleDrawer(4)" [class.active]="activeButton === 4">
+        <mat-icon class="icon-display" aria-label="ITEMS">folder_open</mat-icon>
+      </mat-button-toggle>
+    </div>
 
-  <mat-drawer-container class="sidebar-container">
-    <mat-drawer class="sidebar" mode="side" [opened]="drawerOpen">
-      <div class="sidenav-content">{{ drawerContent }}</div>
-    </mat-drawer>
-  </mat-drawer-container>
+    <mat-drawer-container>
+      <mat-drawer class="sidebar" mode="side" [opened]="drawerOpen">
+        <div class="sidenav-content">{{ drawerContent }}</div>
+      </mat-drawer>
+    </mat-drawer-container>
+  </div>
 </div>
