--- a/client/src/app/components/sidenav/sidenav.component.scss
+++ b/client/src/app/components/sidenav/sidenav.component.scss
@@ -1,13 +1,17 @@
-// --------------------------
-// Style for sidenav buttons
-// --------------------------
+.sidebar-container {
+  display: flex;
+  flex-direction: row;
+}
+
 .sidenav-button-grp {
   display: flex;
   flex-direction: column;
   align-items: center;
+  align-content: center;
   width: 70px;
   height: 100vh;
-  background: rgb(22, 22, 22);
+  background: #2c2929;
+  border-right: 2px solid #4d4c4c;
 }
 
 .icon-display {
@@ -22,35 +26,18 @@
   height:50px;
   background-color: transparent;
   border: none;
-  padding: 5px;
-  margin: 5px;
+  padding: 5px, 5px, 5px, 5px;
+  margin: 5px
 }
 
 .sidenav-button.active {
-  background-color: #2f2f2f
-}
-
-.button-label {
-  display: flex;
-  font-size: 7px;
-  text-align: center;
-  padding: 0px 0px 0px 0px;
-  margin: -22px 0px 0px 0px;
-}
-
-// ------------------
-// Style for sidebar
-// ------------------
-.sidebar-container {
+  background-color: #484747
 }
 
 .sidebar {
   width: 400px;
   height: 100vh;
-  position: fixed;
-  top: 0px;
-  left: 70px;
-  background-color: #2f2f2f;
+  background-color: #333333;
   padding: 0px;
   transition: transform 0.5s ease-in-out;
   transform: translateX(0);
