Update nav component

--- a/client/src/app/components/nav/nav.component.scss
+++ b/client/src/app/components/nav/nav.component.scss
@@ -12,3 +12,9 @@
     font-weight: 500;
     color: whitesmoke;
 }
+
+.account-info {
+    font-size: 16px;
+    font-weight: 400;
+    color: whitesmoke;
+}
