Update nav component to show username when it's available

--- a/client/src/app/components/nav/nav.component.html
+++ b/client/src/app/components/nav/nav.component.html
@@ -4,6 +4,6 @@
             <img src="../../assets/notaverse-logo.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
             Notaverse
         </a>
-        <div class="account-info" *ngIf="user">Hello {{user?.username}}</div>
+        <div class="account-info" *ngIf="user?.username">Hello {{user?.username}}</div>
     </div>
 </nav>
