Updated the price button and scss on the main page

--- a/client/src/app/pages/login/login.component.html
+++ b/client/src/app/pages/login/login.component.html
@@ -1,6 +1,7 @@
 <div class="login-container">
-    <app-nav></app-nav>
-    <div class="login-page">
-        <button class="login-button" (click)="goToHome()">START</button>
-    </div>
+  <app-nav></app-nav>
+  <div class="login-page">
+    <button class="login-button" (click)="goToHome()">START</button>
+    <button class="price-button" routerLink="/price">Pricing</button>
+  </div>
 </div>
