--- a/client/src/app/pages/login/login.component.scss
+++ b/client/src/app/pages/login/login.component.scss
@@ -1,31 +1,51 @@
 .login-container {
-    display: flex;
-    flex-direction: column;
-}
+  display: flex;
+  flex-direction: column;
 
-.login-page {
+  .login-page {
     background-image: url('https://mdbootstrap.com/img/Photos/Others/images/76.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
-}
 
-.login-button {
-    position: absolute;
-    bottom: 25%;
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 12px 24px;
-    border: none;
-    border-radius: 14px;
-    font-size: 20px;
-    font-weight: bold;
-    color: #ffffff;
-    background-color: #b258a1;
-    cursor: pointer;
-    transition: background-color 0.2s ease-in-out;
-}
-  
-.login-button:hover {
-    background-color: #5784bc;
+    .login-button {
+      position: absolute;
+      bottom: 25%;
+      left: 50%;
+      transform: translateX(-50%);
+      padding: 12px 24px;
+      border: none;
+      border-radius: 14px;
+      font-size: 20px;
+      font-weight: bold;
+      color: #ffffff;
+      background-color: #b258a1;
+      cursor: pointer;
+      transition: background-color 0.2s ease-in-out;
+
+      &:hover {
+        background-color: #5784bc;
+      }
+    }
+
+    .price-button {
+      position: absolute;
+      bottom: 15%;
+      left: 50%;
+      transform: translateX(-50%);
+      padding: 12px 24px;
+      border: none;
+      border-radius: 14px;
+      font-size: 20px;
+      font-weight: bold;
+      color: #ffffff;
+      background-color: #007bff;
+      cursor: pointer;
+      transition: background-color 0.2s ease-in-out;
+
+      &:hover {
+        background-color: #0062cc;
+      }
+    }
+  }
 }
