--- a/client/src/app/components/sidenav-content/sidenav-content.component.html
+++ b/client/src/app/components/sidenav-content/sidenav-content.component.html
@@ -13,7 +13,7 @@
         <h3>Elements</h3>
         <div class="element-boxes">
           <div *ngFor="let element of elements">
-            <div class="element-box" [style.background-image]="'url(' + element?.img_url + ')'">
+            <div class="element-box" [style.background-image]="'url(' + img_url_base + element?.img_url + ')'">
             </div>
           </div>
         </div>
@@ -26,7 +26,7 @@
         <div *ngFor="let note of notes">
             <div class="note-box">
                 <div class="note-header">
-                    <div class="note-img" [style.background-image]="'url(' + note?.img_url + ')'"></div>
+                    <div class="note-img" [style.background-image]="'url(' + img_url_base + note?.img_url + ')'"></div>
                     <div class="note-title">{{note?.title}}</div>
                 </div>
                 <div class="note-content">
