--- a/client/src/app/pages/login/login.component.scss
+++ b/client/src/app/pages/login/login.component.scss
@@ -19,12 +19,12 @@
       font-size: 20px;
       font-weight: bold;
       color: #ffffff;
-      background-color: #b258a1;
+      background-color: rgba(49, 49, 49, 0.8);
       cursor: pointer;
       transition: background-color 0.2s ease-in-out;
 
       &:hover {
-        background-color: #5784bc;
+        color: rgb(199, 199, 199);
       }
     }
 
@@ -33,18 +33,18 @@
       bottom: 15%;
       left: 50%;
       transform: translateX(-50%);
-      padding: 12px 24px;
-      border: none;
-      border-radius: 14px;
-      font-size: 20px;
+      padding: 8px 14px;
+      font-size: 18px;
       font-weight: bold;
-      color: #ffffff;
-      background-color: #007bff;
+      color: #0f0f0f;
+      border: none;
+      border-radius: 30px;
+      background-color: rgba(255, 255, 255, 0.3);
       cursor: pointer;
       transition: background-color 0.2s ease-in-out;
 
       &:hover {
-        background-color: #0062cc;
+        color: rgb(59, 59, 59);
       }
     }
   }
