--- a/client/src/app/pages/login/login.component.scss
+++ b/client/src/app/pages/login/login.component.scss
@@ -6,7 +6,7 @@
     background-image: url('https://mdbootstrap.com/img/Photos/Others/images/76.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
+    height: calc(100vh - 60px);
 
     .login-button {
       position: absolute;
