--- a/client/src/app/components/room/room.component.html
+++ b/client/src/app/components/room/room.component.html
@@ -1,1 +1,9 @@
-<p>room works!</p>
+<div>
+    <div class="room-container">
+        <div *ngIf="room">
+            <div>
+                <h1> Display "{{room?.name}}" Content </h1>
+            </div>
+        </div>
+    </div>
+</div>
