--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="home-container">
-    <app-nav [id]="id"></app-nav>
+    <app-nav></app-nav>
     <div class="home-main-container">
-        <app-sidenav [id]='id'></app-sidenav>
+        <app-sidenav></app-sidenav>
         <app-room></app-room>
     </div>
 </div>
