--- a/client/src/app/pages/main/main.component.scss
+++ b/client/src/app/pages/main/main.component.scss
@@ -4,7 +4,7 @@
 }
   
 .main-page {
-    background-image: url('https://mdbootstrap.com/img/Photos/Others/images/76.jpg');
+    background-image: url('../../../assets/cover.png');
     background-repeat: no-repeat;
     background-size: cover;
     height: calc(100vh - 60px);
