--- a/client/src/app/components/nav/nav.component.scss
+++ b/client/src/app/components/nav/nav.component.scss
@@ -19,3 +19,15 @@
     font-weight: 400;
     color: whitesmoke;
 }
+
+.avatar-button {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    background-color: transparent;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+}
