Display ID and email in navbar dropdown

--- a/client/src/app/components/nav/nav.component.html
+++ b/client/src/app/components/nav/nav.component.html
@@ -7,9 +7,12 @@
         <button class="avatar-button" *ngIf="user && userSessionInfo" [matMenuTriggerFor]="beforeMenu">
             <img [src]="userSessionInfo?.user?.profilePhoto" class="rounded-circle" height="35px"/>
         </button>
-            <mat-menu #beforeMenu="matMenu" xPosition="before">
-            <button mat-menu-item disabled=true style="color: inherit">
-                <mat-icon class="" aria-label="ACCOUNT">account_circle</mat-icon><b>{{ userSessionInfo?.user?.displayName }}</b>
+        <mat-menu #beforeMenu="matMenu" xPosition="before">
+            <button disabled=true class="user-info" mat-menu-item>
+                <mat-icon class="" aria-label="ACCOUNT">account_circle</mat-icon>
+                <b>{{ userSessionInfo?.user?.displayName }}</b>
+                <br/><small>ID:{{ userSessionInfo?.user?.oauthId }}</small>
+                <br/><small>{{ userSessionInfo?.user?.email }}</small>
             </button>
             <button mat-menu-item (click)="logout()">
                 <mat-icon class="" aria-label="LOGOUT">logout</mat-icon>Logout
