--- a/client/src/app/components/nav/nav.component.scss
+++ b/client/src/app/components/nav/nav.component.scss
@@ -31,3 +31,9 @@
     justify-content: center;
     padding: 0;
 }
+
+button.user-info:disabled {
+    color: #ffffff;
+    border-bottom: 1.5px solid #6a6a6a;
+    padding-bottom: 4px;
+}
