--- a/client/src/app/pages/price/price.component.scss
+++ b/client/src/app/pages/price/price.component.scss
@@ -1,6 +1,11 @@
-.price-plans {
+.price-plans-container {
+  width: 100vw;
+  height: calc(100vh - 60px);
+  background-color: #afafaf;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
+  padding: 8%;
 }
 
 .price-plan {
@@ -8,8 +13,10 @@
   flex-direction: column;
   justify-content: space-between;
   width: 30%;
-  background-color: #f5f5f5;
+  height: 80%;
+  background-color: #e3e3dc;
   padding: 20px;
+  margin: 10px;
   border-radius: 10px;
   text-align: center;
 
@@ -26,7 +33,7 @@
 
   ul {
     list-style-type: none;
-    padding: 0;
+    padding: 5px, 5px;
     margin: 10px 0;
     font-size: 16px;
     text-align: left;
@@ -36,7 +43,7 @@
     margin-bottom: 5px;
     &:before {
       content: '•';
-      color: #007bff;
+      color: #457946;
       display: inline-block;
       width: 1em;
       margin-left: -1em;
@@ -44,7 +51,7 @@
   }
 
   button {
-    background-color: #007bff;
+    background-color: #3e6e3f;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -54,57 +61,7 @@
     transition: background-color 0.2s;
 
     &:hover {
-      background-color: #0062cc;
-    }
-  }
-
-  // Additional styles for different plan types
-
-  &.basic {
-    background-color: #f5f5f5;
-    h2 {
-      color: #007bff;
-    }
-    button {
-      background-color: #fff;
-      color: #007bff;
-      border: 2px solid #007bff;
-      &:hover {
-        background-color: #007bff;
-        color: #fff;
-      }
-    }
-  }
-
-  &.premium {
-    background-color: #f5f5f5;
-    h2 {
-      color: #28a745;
-    }
-    p {
-      color: #28a745;
-    }
-    button {
-      background-color: #28a745;
-      &:hover {
-        background-color: #218838;
-      }
-    }
-  }
-
-  &.business {
-    background-color: #f5f5f5;
-    h2 {
-      color: #dc3545;
-    }
-    p {
-      color: #dc3545;
-    }
-    button {
-      background-color: #dc3545;
-      &:hover {
-        background-color: #c82333;
-      }
+      background-color: #3b643c;
     }
   }
 }
